--- a/app/NovaWeb/src/styles/partials/_tabs.scss
+++ b/app/NovaWeb/src/styles/partials/_tabs.scss
@@ -1,9 +1,3 @@
-.tab-pane {
-  border: solid 1px $gray-lighter;
-  border-radius: $border-radius-amount;
-  padding: 18px 20px;
-}
-
 .nav-tabs {
   border: 0;
   margin-bottom: 10px;
